// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tootips open 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-popover-plane"
        data-testid="mask"
      />
      <div
        class="xrk-popover-show"
        data-testid="centent"
      >
        <div
          class="xrk-tooltip-arrow xrk-tooltip-arrow-bottom"
          style="top: 0px; left: 0px;"
        />
        <div
          class="xrk-tooltip xrk-tooltip-bottom"
          style="top: 8.533333333333333px; left: -76.80000000000001px;"
        >
          <div
            class="xrk-tooltip-item xrk-f xrk-ac xrk-jc"
          >
            金币
          </div>
          <div
            class="xrk-tooltip-item xrk-f xrk-ac xrk-jc xrk-tooltip-active"
          >
            人鱼
          </div>
        </div>
      </div>
      <div
        class="xrk-popover "
      >
        更多
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-popover-plane"
      data-testid="mask"
    />
    <div
      class="xrk-popover-show"
      data-testid="centent"
    >
      <div
        class="xrk-tooltip-arrow xrk-tooltip-arrow-bottom"
        style="top: 0px; left: 0px;"
      />
      <div
        class="xrk-tooltip xrk-tooltip-bottom"
        style="top: 8.533333333333333px; left: -76.80000000000001px;"
      >
        <div
          class="xrk-tooltip-item xrk-f xrk-ac xrk-jc"
        >
          金币
        </div>
        <div
          class="xrk-tooltip-item xrk-f xrk-ac xrk-jc xrk-tooltip-active"
        >
          人鱼
        </div>
      </div>
    </div>
    <div
      class="xrk-popover "
    >
      更多
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tootips open move 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-popover-plane"
        data-testid="mask"
      />
      <div
        class="xrk-popover-show"
        data-testid="centent"
      >
        <div
          class="xrk-tooltip-arrow xrk-tooltip-arrow-bottom"
          style="top: 0px; left: 0px;"
        />
        <div
          class="xrk-tooltip xrk-tooltip-bottom"
          style="top: 18.53333333333333px; left: -26.80000000000001px;"
        >
          <div
            class="xrk-tooltip-item xrk-f xrk-ac xrk-jc"
          >
            金币
          </div>
          <div
            class="xrk-tooltip-item xrk-f xrk-ac xrk-jc xrk-tooltip-active"
          >
            人鱼
          </div>
        </div>
      </div>
      <div
        class="xrk-popover "
      >
        更多
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-popover-plane"
      data-testid="mask"
    />
    <div
      class="xrk-popover-show"
      data-testid="centent"
    >
      <div
        class="xrk-tooltip-arrow xrk-tooltip-arrow-bottom"
        style="top: 0px; left: 0px;"
      />
      <div
        class="xrk-tooltip xrk-tooltip-bottom"
        style="top: 18.53333333333333px; left: -26.80000000000001px;"
      >
        <div
          class="xrk-tooltip-item xrk-f xrk-ac xrk-jc"
        >
          金币
        </div>
        <div
          class="xrk-tooltip-item xrk-f xrk-ac xrk-jc xrk-tooltip-active"
        >
          人鱼
        </div>
      </div>
    </div>
    <div
      class="xrk-popover "
    >
      更多
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tootips 快照 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-popover "
      >
        更多
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-popover "
    >
      更多
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
